--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-interpolation-animation",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": false,
+  "main": "dist/index.js",
   "homepage": "https://thomasoniii.github.io/react-interpolation-animation",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
