--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-interpolation-animation",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": false,
   "main": "dist/index.js",
   "homepage": "https://thomasoniii.github.io/react-interpolation-animation/",
@@ -51,5 +51,9 @@
     "react": "^17.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-peer-deps-external": "^2.2.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
