--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
   "name": "react-interpolation-animation",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": false,
   "main": "dist/index.js",
   "homepage": "https://thomasoniii.github.io/react-interpolation-animation/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thomasoniii/react-interpolation-animation"
+  },
+  "bugs": {
+    "url": "https://github.com/thomasoniii/react-interpolation-animation/issues"
+  },
+  "license": "MIT",
+  "author": "Jim Thomaon",
+  "keywords": [
+    "react",
+    "react-component",
+    "simple",
+    "zero config",
+    "animation",
+    "interpolation"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
