--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-interpolation-animation",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": false,
   "main": "dist/index.js",
   "homepage": "https://thomasoniii.github.io/react-interpolation-animation/",
@@ -21,14 +21,7 @@
     "animation",
     "interpolation"
   ],
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -68,7 +61,13 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "rollup": "^2.56.3",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
